# jeepney-api

./: README.md  docker-compose.yml  init.sql
app/: pyproject.toml
app/jeepney_api/: apps.py  models.py  serializers.py  views.py
app/jeepney_api/migrations/: 0001_initial.py  0002_alter_jeepney_destination_code_and_more.py  0003_alter_jeepney_jeepney_service_no.py  0004_passengervolume.py  0005_jeepneystop.py  0006_rename_volume_of_passengers_passengervolume_passenger_volume.py  0007_alter_passengervolume_passenger_volume.py
app/take_home/: settings.py  urls.py
docker/: entrypoint.sh
docker/app/: dockerfile
docker/db/: dockerfile
